change api end-point path
